# climax

./: CHANGELOG.md  CLAUDE.md  README.md  climax.py  generate-config-prompt.md  generate-specs.sh  pyproject.toml  test-inspector.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
.specify/memory/: constitution.md
configs/: README.md  claude.yaml  docker.yaml  git.yaml  jj.yaml  obsidian.yaml
examples/: coreutils.yaml  docker.yaml  obsidian.yaml
scripts/: benchmark_tokens.py
skill/: SKILL.md
specs/001-tool-discovery-index/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tool-discovery-index/checklists/: requirements.md
specs/001-tool-discovery-index/contracts/: tool-index-api.md
specs/002-mcp-meta-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mcp-meta-tools/checklists/: requirements.md
specs/002-mcp-meta-tools/contracts/: mcp-tools.md
specs/003-discovery-tests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-discovery-tests/checklists/: requirements.md
specs/003-discovery-tests/contracts/: test-contract.md
tests/: conftest.py  test_cli.py  test_command.py  test_config.py  test_discovery_gaps.py  test_docker.py  test_e2e.py  test_e2e_policy.py  test_index.py  test_integration_discovery.py  test_meta_tools.py  test_policy.py  test_run.py  test_schema.py  test_server.py  test_validation.py
