[project]
name = "climax"
version = "0.2.0"
description = "Expose any CLI as MCP tools via YAML configuration"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "mcp>=1.7",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
climax = "climax:main"
