[project]
name = "climax"
version = "0.2.0"
description = "Expose any CLI as MCP tools via YAML configuration"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "mcp>=1.7",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
climax = "climax:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatchling.build]
force-include = {"skill/SKILL.md" = "skill/SKILL.md"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
