[project]
name = "climax-mcp"
version = "0.3.0"
description = "Expose any CLI as MCP tools via YAML configuration"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "get2know.io"}]
keywords = ["mcp", "cli", "yaml", "tools", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.7",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]
benchmark = ["tiktoken>=0.7"]

[project.urls]
Homepage = "https://github.com/get2knowio/climax"
Repository = "https://github.com/get2knowio/climax"
Issues = "https://github.com/get2knowio/climax/issues"

[project.scripts]
climax = "climax:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["climax.py", "configs", "skill"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
